--- a/package.json
+++ b/package.json
@@ -14,6 +14,8 @@
   "scripts": {
     "start": "react-scripts start",
     "build": "react-scripts build",
+    "build-tailwind": "tailwindcss -i ./src/styles/input.css -o ./src/styles/output.css",
+    "watch-tailwind": "tailwindcss -i ./src/styles/input.css -o ./src/styles/output.css --watch",
     "test": "react-scripts test",
     "eject": "react-scripts eject"
   },
@@ -34,5 +36,8 @@
       "last 1 firefox version",
       "last 1 safari version"
     ]
+  },
+  "devDependencies": {
+    "tailwindcss": "^3.2.7"
   }
 }
